--- a/templates/base.html
+++ b/templates/base.html
@@ -193,7 +193,7 @@
     <!-- ========== FOOTER ========== -->
     {% if user.is_authenticated %}
     <footer class="footer">
-        <p>&copy; 2024 SIGEM - Corpo de Bombeiros Militar do Estado de Goiás</p>
+        <p>&copy; 2026 SIGEM - Desenvolvido por Heitor Braga de Paula - <i>AI assisted</i></p>
     </footer>
     {% endif %}
     
