--- a/templates/htmx/solicitacoes_validacao.html
+++ b/templates/htmx/solicitacoes_validacao.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+<div id="validation-content">
 <!-- Barra de Filtros -->
 <div class="validation-filters">
     <div class="filters-row">
@@ -271,6 +274,7 @@
         </div>
     </div>
 </div>
+</div> <!-- End validation-content -->
 
 <style>
 /* Validation Filters */
